# custom-command-tool

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md  rustfmt.toml
.claude/skills/speckit-clarify/: SKILL.md
.specify/: feature.json  init-options.json  integration.json
.specify/extensions/: .registry
.specify/integrations/: claude.manifest.json  speckit.manifest.json
.specify/memory/: constitution.md
.specify/workflows/: workflow-registry.json
specs/001-text-replace-tool/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-text-replace-tool/checklists/: requirements.md
specs/001-text-replace-tool/contracts/: cli-main.md  cli-trt.md
specs/002-affected-stats-visualization/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-affected-stats-visualization/checklists/: requirements.md
specs/002-affected-stats-visualization/contracts/: cli-gui.md  trt-stats-output.md
src/: cli.rs  error.rs  main.rs  registry.rs
src/commands/: mod.rs
src/commands/gui/: app.rs  form.rs  mod.rs  runner.rs
src/commands/trt/: args.rs  backup.rs  matcher.rs  mod.rs  replacer.rs  rules.rs  scanner.rs  undo.rs
src/util/: fs_atomic.rs  mod.rs  progress.rs
tests/: main_framework.rs  trt_backup_undo.rs  trt_binary_skip.rs  trt_replace.rs  trt_stats.rs
