[package]
name = "cct"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "自定义命令行工具：通过子命令快速完成各种自定义命令"

[dependencies]
aho-corasick = "1.1.4"
anyhow = "1.0.102"
chrono = "0.4.44"
clap = { version = "4.6.1", features = ["derive"] }
eframe = { version = "0.34.3", default-features = false, features = ["glow", "default_fonts"], optional = true }
ignore = "0.4.25"
indicatif = "0.18.4"
memchr = "2.8.1"
rayon = "1.12.0"
regex = "1.12.3"
rfd = { version = "0.17.2", optional = true }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
tempfile = "3.27.0"
thiserror = "2.0.18"
zip = { version = "8.6.0", default-features = false, features = ["deflate"] }

[dev-dependencies]
assert_cmd = "2.2.2"
predicates = "3.1.4"

[features]
# 默认启用图形界面（桌面用户）。CLI-only 构建用 --no-default-features，
# 不含 eframe/rfd 等 GUI 重依赖，便于减小体积并支持 musl 静态交叉编译。
default = ["gui"]
# 图形界面：桌面原生窗口（eframe/egui）+ 原生文件对话框（rfd）。
gui = ["dep:eframe", "dep:rfd"]
